<?xml version="1.0"?>
<package>
  <name>vesc</name>
  <version>1.0.0</version>
  <description>
    Metapackage for ROS interface to the Vedder VESC open source motor controller.
  </description>

  <maintainer email="joebetz@seas.upenn.edu">Johannes Betz</maintainer>
  <author email="boulet@ll.mit.edu">Michael T. Boulet</author>
  <author email="josh.whitley@autoware.org">Joshua Whitley</author>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/vesc</url>
  <url type="repository">https://github.com/f1tenth/vesc</url>
  <url type="bugtracker">https://github.com/f1tenth/vesc/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>vesc_driver</run_depend>
  <run_depend>vesc_msgs</run_depend>
  <run_depend>vesc_ackermann</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
