<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vesc</name>
  <version>1.1.0</version>
  <description>
    Metapackage for ROS interface to the Vedder VESC open source motor controller.
  </description>
  <maintainer email="joebetz@seas.upenn.edu">Johannes Betz</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/vesc</url>
  <url type="repository">https://github.com/f1tenth/vesc</url>
  <url type="bugtracker">https://github.com/f1tenth/vesc/issues</url>
  <author email="boulet@ll.mit.edu">Michael T. Boulet</author>
  <author email="josh.whitley@autoware.org">Joshua Whitley</author>

  <url type="website">http://www.ros.org/wiki/vesc</url>
  <url type="repository">https://github.mit.edu/racecar/vesc</url>
  <url type="bugtracker">https://github.mit.edu/racecar/vesc/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>vesc_driver</depend>
  <depend>vesc_msgs</depend>
  <depend>vesc_ackermann</depend>

  <export>
    <metapackage/>
  </export>

</package>
