<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vesc_ackermann</name>
  <version>1.1.0</version>
  <description>
    Translate between VESC messages and ROS ackermann and odometry messages.
  </description>
  <maintainer email="joebetz@seas.upenn.edu">Johannes Betz</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/vesc_ackermann</url>
  <url type="repository">https://github.com/f1tenth/vesc</url>
  <url type="bugtracker">https://github.com/f1tenth/vesc/issues</url>
  <author email="boulet@ll.mit.edu">Michael T. Boulet</author>
  <author email="josh.whitley@autoware.org">Joshua Whitley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>vesc_msgs</build_depend>

  <exec_depend>nodelet</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>vesc_msgs</exec_depend>

  <export>
    <nodelet plugin="${prefix}/vesc_ackermann_nodelet.xml"/>
  </export>

</package>
