<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vesc_driver</name>
  <version>1.1.0</version>
  <description>
    ROS device driver for the Vedder VESC open source motor driver.
  </description>
  <maintainer email="joebetz@seas.upenn.edu">Johannes Betz</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/vesc_driver</url>
  <url type="repository">https://github.com/f1tenth/vesc</url>
  <url type="bugtracker">https://github.com/f1tenth/vesc/issues</url>
  <author email="boulet@ll.mit.edu">Michael T. Boulet</author>
  <author email="josh.whitley@autoware.org">Joshua Whitley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vesc_msgs</build_depend>
  <build_depend>serial</build_depend>

  <exec_depend>nodelet</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vesc_msgs</exec_depend>
  <exec_depend>serial</exec_depend>

  <export>
    <nodelet plugin="${prefix}/vesc_driver_nodelet.xml"/>
  </export>

</package>
