<?xml version="1.0"?>
<package>
  <name>vesc_msgs</name>
  <version>1.0.0</version>
  <description>
    ROS message definitions for the Vedder VESC open source motor controller.
  </description>

  <maintainer email="joebetz@seas.upenn.edu">Johannes Betz</maintainer>
  <author email="boulet@ll.mit.edu">Michael T. Boulet</author>
  <author email="josh.whitley@autoware.org">Joshua Whitley</author>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/vesc_msgs</url>
  <url type="repository">https://github.com/f1tenth/vesc</url>
  <url type="bugtracker">https://github.com/f1tenth/vesc/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
