<?xml version="1.0"?>
<package format="2">
  <name>vesc_msgs</name>
  <version>1.1.0</version>
  <description>
    ROS message definitions for the Vedder VESC open source motor controller.
  </description>
  <maintainer email="joebetz@seas.upenn.edu">Johannes Betz</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/vesc_msgs</url>
  <url type="repository">https://github.com/f1tenth/vesc</url>
  <url type="bugtracker">https://github.com/f1tenth/vesc/issues</url>
  <author email="boulet@ll.mit.edu">Michael T. Boulet</author>
  <author email="josh.whitley@autoware.org">Joshua Whitley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
